[tool.poetry]
name = "tiff-utils"
version = "0.1.0"
description = "Utilities for interacting with TIFF files in Python"
authors = ["andrewmoorman <andrewmoormanMSKCC@gmail.com>"]
license = "GNU"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
tifffile = "^2024.4.24"
bfio = "^2.3.6"
opencv-python = "^4.9.0.80"
numpy = "^1.26.4"
scipy = "^1.13.0"
tqdm = "^4.66.2"
zarr = "^2.17.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
